5/9/2004
	- Add support for options within an OPTRecord (loosely based on
	  a patch from Madhu Siddalingaiah <madhu@madhu.com>)

4/18/2004
	- Add support for the SSHFP record type.
	- Fix a bug in the zone code which would cause record lookups to fail.

4/10/2004
	- When parsing paster files, handle the fact that class and ttl may
	  be in either order.

4/8/2004
	- The opcode field in the DNS header was incorrectly parsed; this
	  would affect messages with opcodes other than QUERY.
	  (Madhu Siddalingaiah <madhu@madhu.com>)

3/20/2004
	- 1.6.2 released.
	- Lookups could return "referral" instead of "host not found" in some
	  cases.

3/18/2004
	- Fix NullPointerExceptions caused by bad empty Record handling.
	  (reported by Dharmveer Jain <dharmveer_jain@yahoo.com>)

3/16/2004
	- 1.6.1 released.
	- When loading master files with $INCLUDE statements, the included
	  files should be opened relative to the current directory, not
	  the directory of the parent file.

3/12/2004
	- Make it possible to use a Tokenizer without leaving files open.

3/4/2004 - 3/12/2004
	- Add support for more record types (AFSDB, GPOS, ISDN, MB, MD, MF, MG,
	  MINFO, MR, NSAP, NSAP-PTR, NULL, PX, RT, WKS, X25).

3/3/2004
	- Cached NXDOMAINs were ignored, which caused extra queries to
	  be sent (reported by Damon Hart-Davis <d@hd.org>).

2/25/2004
	- Attempting to load a zone without specifying an origin failed.

2/24/2004
	- 1.5.2 released.

2/3/2004
	- Message.isSigned() should return true if we signed the Message
	  with a TSIG.
	  (reported by Shobana Sampath <shobanas@cisco.com>)
	- Implement NSEC, DNSKEY, and RRSIG record types.  (loosely based on
	  a patch from David Blacka <davidb@verisignlabs.com>).
	- Change the representations of sections, rcodes, opcodes, flags,
	  and credibility to int.

1/28/2004
	- Attempt to better deal with OutOfMemoryErrors when creating
	  threads during the resolution process.
	  (reported by Joseph Shraibman <jks@iname.com>)

1/27/2004